--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,58 @@
 .DS_Store
 Thumbs.db
 
+# Fichiers et dossiers spécifiques à .NET
+**/bin/
+**/obj/
+*.user
+*.suo
+**/.vs/
+**/.vscode/
+*.vspscc
+*.vssscc
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+# Fichiers de packages NuGet
+*.nupkg
+# Le dossier packages peut être ignoré car NuGet restaure les packages
+**/packages/*
+
+# Fichiers de build MSBuild
+*.pdb
+*.dll
+*.exe
+*.zip
+*.cache
+
+# Fichiers de test
+**/TestResults/
+**/*[Tt]est[Rr]esult*/
+**/*.coverage
+**/*.coveragexml
+
+# Fichiers de bases de données en mémoire
+*.db
+*.db-shm
+*.db-wal
+
+# Fichiers de logs
+*.log
+**/logs/
+
+# Fichiers d'environnement local
+.env
+**/local.settings.json
+
+# Fichiers de cache et d'IDE
+**/.idea/
+**/_ReSharper*/
+**/*.[Rr]e[Ss]harper
+**/*.DotSettings.user
+**/_UpgradeReport_Files/
+**/Backup*/
+**/UpgradeLog*.XML
+**/UpgradeLog*.htm
+
