--- a/.github/workflows/dotnet-angular.yml
+++ b/.github/workflows/dotnet-angular.yml
@@ -35,36 +35,34 @@ jobs:
       - name: Run backend tests
         run: dotnet test --no-build --verbosity normal
 
-  build_frontend:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-    needs: build_backend
-    services:
-      xvfb:
-        image: selenium/standalone-chrome:latest
-        options: >-
-          --entrypoint /usr/bin/Xvfb
-    steps:
-      - uses: actions/checkout@v4
+build_frontend:
+  runs-on: ubuntu-latest
+  defaults:
+    run:
+      working-directory: ./frontend
+  needs: build_backend
+  steps:
+    - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
 
-      - name: Cache npm deps
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+    - name: Cache npm deps
+      uses: actions/cache@v3
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Install dependencies
+      run: |
+        npm clean-install
+        npm ci --legacy-peer-deps
 
-      - name: Build Angular app
-        run: npm run build -- --configuration production
+    - name: Build Angular app
+      run: npm run build -- --configuration production --verbose
 
-      - name: Run Angular tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless
+    - name: Run Angular tests
+      run: |
+        npm run test -- --watch=false --browsers=ChromeHeadless
