--- a/.github/workflows/dotnet-angular.yml
+++ b/.github/workflows/dotnet-angular.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.101'  # adapte si besoin :contentReference[oaicite:1]{index=1}
+          dotnet-version: '9.0.101'  # adapte si besoin
 
       - name: Cache NuGet deps
         uses: actions/cache@v3
@@ -42,27 +42,32 @@ jobs:
         working-directory: ./frontend
     needs: build_backend
     steps:
-      - uses: actions/checkout@v4
-  
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-  
+
       - name: Cache npm deps
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-  
+
       - name: Install dependencies
         run: |
           npm clean-install
           npm ci --legacy-peer-deps
-  
+
+      - name: Run backend server
+        run: |
+          nohup dotnet run --project ../Backend/CesiZen.Api/CesiZen.Api.csproj --urls=http://localhost:5016 & sleep 10
+
       - name: Build Angular app
         run: npm run build -- --configuration production --verbose
-  
+
       - name: Run Angular tests
         run: |
           npm run test -- --watch=false --browsers=ChromeHeadless
