--- a/.github/workflows/dotnet-angular.yml
+++ b/.github/workflows/dotnet-angular.yml
@@ -34,9 +34,13 @@ jobs:
 
       - name: Run backend tests
         run: dotnet test --no-build --verbosity normal
+        
   build_frontend:
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: ./frontend
+  
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -49,8 +53,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
   
-      #- name: Run unit tests
-      #  run: npm test -- --watch=false --browsers=ChromeHeadless
-
       - name: Build Angular app
         run: npm run build -- --configuration production --verbose
