--- a/.github/workflows/dotnet-angular.yml
+++ b/.github/workflows/dotnet-angular.yml
@@ -34,7 +34,8 @@ jobs:
 
       - name: Run backend tests
         #run: dotnet test --no-build --verbosity normal
-        run: dotnet test Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
+        #run: dotnet test Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
+        run: dotnet test ../Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
         
   build_frontend:
     runs-on: ubuntu-latest
