--- a/.github/workflows/dotnet-angular.yml
+++ b/.github/workflows/dotnet-angular.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Run backend tests
         #run: dotnet test --no-build --verbosity normal
         #run: dotnet test Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
-        run: dotnet test ./Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
+        #run: dotnet test ./Backend.Tests/Backend.Tests.csproj --no-build --verbosity normal
+        run: dotnet test ./Backend.Tests --no-build --verbosity normal
         
   build_frontend:
     runs-on: ubuntu-latest
