--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,14 @@
-# Étape 1 : Build de l'application avec le SDK .NET
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-
-WORKDIR /app
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+WORKDIR /src
 
 COPY . .
-
 RUN dotnet restore
 RUN dotnet publish -c Release -o /app/publish
 
-# Étape 2 : Runtime ASP.NET uniquement
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
-
+# Runtime stage
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
 WORKDIR /app
-
-COPY --from=build /app/publish ./
-
-EXPOSE 5000
+COPY --from=build /app/publish .
 
 ENTRYPOINT ["dotnet", "Backend.dll"]
