--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres-prod:
     image: postgres:latest
-    container_name: postegres_db_CESIZen_prod
+    container_name: postgres_db_CESIZen_prod
     restart: always
     environment:
       POSTGRES_USER: CesiZenAdm
@@ -16,6 +16,11 @@ services:
     networks:
       - backend-prod-emilien
       - traefik
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U CesiZenAdm"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   backend-prod:
     build:
@@ -23,21 +28,20 @@ services:
       dockerfile: Dockerfile
     container_name: backend-prod
     working_dir: /app
-#    volumes:
-#      - ./backend/publish:/app
     expose:
       - "5000"
     environment:
       - ASPNETCORE_URLS=http://+:5000
-      - ConnectionStrings__DefaultConnection=Host=postegres_db_CESIZen;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
+      - ConnectionStrings__DefaultConnection=Host=postgres-prod;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
     depends_on:
       - postgres-prod
+    restart: unless-stopped
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod/api`)"
       - "traefik.http.middlewares.api-strip.stripprefix.prefixes=/emilien-prod/api"
       - "traefik.http.routers.api.middlewares=api-strip"
-      - "traefik.http.services.api.loadbalancer.server.port=8080"
+      - "traefik.http.services.api.loadbalancer.server.port=5000"
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls.certresolver=le"
     networks:
@@ -45,17 +49,16 @@ services:
       - traefik
     command: ["dotnet", "Backend.dll"]
 
-
-
   frontend-prod:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     container_name: frontend-prod
     expose:
-      - "4000"  # SSR Angular écoute ici
+      - "4000"  # SSR Angular Ã©coute ici
     depends_on:
       - backend-prod
+    restart: unless-stopped
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
