base url for assets etc

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -64,12 +64,14 @@
                   "maximumError": "15kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/emilien-prod/"
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "baseHref": "/emilien-dev/"
             }
           },
           "defaultConfiguration": "production"
