--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -64,14 +64,12 @@
                   "maximumError": "15kB"
                 }
               ],
-              "outputHashing": "all",
-              "baseHref": "/emilien-prod/"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true,
-              "baseHref": "/emilien-dev/"
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
