--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ssr": "ng build --configuration production",
+    "build:ssr": "ng build --configuration production && ng run frontend:server:production",
     "serve:ssr": "node dist/frontend/server/main.js",
     "test": "ng test"
   },
