--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,10 +8,39 @@ server {
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
+    # Configuration des types MIME
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # Types MIME spécifiques pour JavaScript modules
+    types {
+        application/javascript js mjs;
+        text/javascript js mjs;
+    }
+
     # Frontend Angular SSR
     location / {
         proxy_pass http://frontend:4000;
-          proxy_http_version 1.1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
+    # Routes spécifiques pour emilien-dev et emilien-prod
+    location /emilien-dev/ {
+        proxy_pass http://frontend:4000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
+    location /emilien-prod/ {
+        proxy_pass http://frontend:4000;
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
