--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -34,6 +34,13 @@ ENV NODE_OPTIONS="--max-old-space-size=1024"
 RUN npm install --legacy-peer-deps
 RUN npm run build:ssr -- --base-href $BASE_HREF
 
+# Étape intermédiaire : Organiser les assets pour nginx
+FROM --platform=linux/arm64 alpine:latest as assets-organizer
+WORKDIR /assets
+
+# Copier les assets du build
+COPY --from=builder /app/dist/frontend/browser/assets /var/www/html/assets
+
 # Étape 2 : Image finale pour exécution SSR, aussi alpine ARM64
 FROM --platform=linux/arm64 node:20-alpine
 
@@ -41,6 +48,9 @@ WORKDIR /app
 
 COPY --from=builder /app/dist /app/dist
 COPY --from=builder /app/package*.json ./
+
+# Copier les assets pour le serveur SSR
+COPY --from=assets-organizer /var/www/html /var/www/html
 
 RUN npm install --only=production --legacy-peer-deps
 
