--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,6 +17,13 @@ server {
         application/javascript js mjs;
         text/javascript js mjs;
     }
+    
+    # Servir directement les fichiers statiques depuis le frontend
+    location ~ ^/emilien-(dev|prod)/assets/ {
+        alias /var/www/html/;
+        try_files $uri $uri/ =404;
+        add_header Cache-Control "public, max-age=31536000";
+    }
 
     # Frontend Angular SSR
     location / {
