--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -55,14 +55,14 @@ server {
     }
 
     # Backend .NET API
-#    location /api/ {
-#        proxy_pass http://backend:5000/api/;
-#          proxy_http_version 1.1;
-#        proxy_set_header Host $host;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header X-Forwarded-Proto $scheme;
-#    }
+    location /api/ {
+        proxy_pass http://backend:5000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
 
 # Redirection HTTP vers HTTPS
