--- a/Deploiement/docker-compose.dev.yml
+++ b/Deploiement/docker-compose.dev.yml
@@ -58,6 +58,8 @@ services:
     container_name: frontend-dev
     ports:
       - "4000:4000"  # SSR Angular Ã©coute ici
+    environment:
+      - API_URL=/emilien-dev/api
     depends_on:
       - backend-dev
     restart: unless-stopped
