--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -45,6 +45,16 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
     
+    # API pour emilien-dev
+    location /emilien-dev/api/ {
+        proxy_pass http://backend:5000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
     location /emilien-prod/ {
         proxy_pass http://frontend:4000;
         proxy_http_version 1.1;
