--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -53,9 +53,11 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+      args:
+        BASE_HREF: /emilien-prod/
     container_name: frontend-prod
     expose:
-      - "4000"  # SSR Angular Ã©coute ici
+      - "80"  # Nginx écoute sur le port 80
     environment:
       - API_URL=/emilien-prod/api
     depends_on:
@@ -64,7 +66,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
-      - "traefik.http.services.front.loadbalancer.server.port=4000"
+      - "traefik.http.services.front.loadbalancer.server.port=80"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.routers.front.tls.certresolver=le"
     networks:
