--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -40,11 +40,7 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            },
+            "outputMode": "static",
             "allowedCommonJsDependencies": [
               "@angular/animations",
               "@angular/animations/browser"
