--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,22 +25,18 @@ server {
         add_header Cache-Control "public, max-age=31536000";
     }
 
-    # Frontend Angular SSR
+    # Frontend Nginx (au lieu de SSR Angular)
     location / {
-        proxy_pass http://frontend:4000;
+        proxy_pass http://frontend:80;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
     
     # Routes spécifiques pour emilien-dev et emilien-prod
     location /emilien-dev/ {
-        proxy_pass http://frontend:4000;
+        proxy_pass http://frontend:80;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
@@ -56,10 +52,8 @@ server {
     }
     
     location /emilien-prod/ {
-        proxy_pass http://frontend:4000;
+        proxy_pass http://frontend:80;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
