--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -57,7 +57,7 @@ services:
         BASE_HREF: /emilien-prod/
     container_name: frontend-prod
     expose:
-      - "80"  # Nginx écoute sur le port 80
+      - "4000"  # SSR Angular écoute sur 4000
     environment:
       - API_URL=/emilien-prod/api
     depends_on:
@@ -66,7 +66,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
-      - "traefik.http.services.front.loadbalancer.server.port=80"
+      - "traefik.http.services.front.loadbalancer.server.port=4000"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.routers.front.tls.certresolver=le"
     networks:
