--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     working_dir: /app
     volumes:
       - ./backend/publish:/app
-    expose:
-      - "5000"
+    ports:
+      - "5001:5000"
     environment:
       - ASPNETCORE_URLS=http://+:5000
       - ConnectionStrings__DefaultConnection=Host=postegres_db_CESIZen;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
@@ -38,30 +38,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: frontend
-    expose:
-      - "80"  # Nginx écoute sur 80
+    ports:
+      - "4000:80"
     environment:
-      - API_URL=/emilien-dev/api
+      - API_URL=/api
     volumes:
       - static_assets:/usr/share/nginx/html/assets
     depends_on:
-      - backend
-    networks:
-      - cesizen
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt:ro
-      - ./nginx/certs/server.key:/etc/nginx/ssl/server.key:ro
-      - static_assets:/var/www/html
-    depends_on:
-      - frontend
       - backend
     networks:
       - cesizen
