--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ssr": "ng build --configuration production",
     "build:prod": "ng build --configuration production",
+    "serve:ssr": "node dist/frontend/server/server.mjs",
     "test": "ng test"
   },
   "private": true,
