--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -35,7 +35,7 @@ server {
     
     # Routes spécifiques pour emilien-dev et emilien-prod
     location /emilien-dev/ {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend-dev:80;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
@@ -43,7 +43,7 @@ server {
     
     # API pour emilien-dev
     location /emilien-dev/api/ {
-        proxy_pass http://backend:5000/api/;
+        proxy_pass http://backend-dev:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -52,7 +52,7 @@ server {
     }
     
     location /emilien-prod/ {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend-prod:80;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
@@ -60,12 +60,29 @@ server {
 
     # Backend .NET API
     location /api/ {
-        proxy_pass http://backend:5000/api/;
+        proxy_pass http://backend:5016/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configuration CORS
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        
+        # Traitement spécial pour les requêtes OPTIONS (preflight)
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
 }
 
