--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,8 +16,8 @@ FROM --platform=linux/arm64 nginx:alpine
 # Copier le build de l'application
 COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 
-# Copier la configuration nginx personnalisée si nécessaire
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copier la configuration nginx personnalisée
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
