--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,14 +33,6 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
     
-    # Routes spécifiques pour emilien-dev et emilien-prod
-    location /emilien-dev/ {
-        proxy_pass http://frontend-dev:80;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-    
     # API pour emilien-dev
     location /emilien-dev/api/ {
         proxy_pass http://backend-dev:5000/api/;
@@ -51,11 +43,41 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     
+    # API pour emilien-prod
+    location /emilien-prod/api/ {
+        proxy_pass http://backend-prod:5000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Routes spécifiques pour emilien-dev
+    # Doit être placé après les routes API mais avant les routes génériques
+    location /emilien-dev/ {
+        # Rediriger vers le frontend-dev
+        proxy_pass http://frontend-dev:80;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Pour le rafraîchissement des pages - géré par le conteneur nginx interne
+        # Cette directive sera utilisée par le serveur nginx dans le conteneur frontend-dev
+        error_page 404 = /emilien-dev/index.html;
+    }
+    
+    # Routes spécifiques pour emilien-prod
     location /emilien-prod/ {
+        # Rediriger vers le frontend-prod
         proxy_pass http://frontend-prod:80;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # Pour le rafraîchissement des pages - géré par le conteneur nginx interne
+        # Cette directive sera utilisée par le serveur nginx dans le conteneur frontend-prod
+        error_page 404 = /emilien-prod/index.html;
     }
 
     # Backend .NET API
@@ -92,4 +114,25 @@ server {
     server_name localhost;
 
     return 301 https://$host$request_uri;
+}
+
+# Serveur pour rediriger les requêtes 5001 vers 5016
+server {
+    listen 5001;
+    server_name localhost;
+    
+    location / {
+        proxy_pass http://localhost:5016;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configuration CORS
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+    }
 }
