Ajout de l'intégration Vault pour la gestion des variables d'environnement

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,6 +25,13 @@ server {
         add_header Cache-Control "public, max-age=31536000";
     }
 
+    # Fichiers env.js pour les configurations chargées depuis Vault
+    location ~ ^/emilien-(dev|prod)/env.js {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        try_files $uri =404;
+    }
+
     # Frontend Nginx (au lieu de SSR Angular)
     location / {
         proxy_pass http://frontend:80;
