--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -33,45 +33,80 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:5000
       - ConnectionStrings__DefaultConnection=Host=postgres-prod;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/prod/config
     depends_on:
       - postgres-prod
+      - vault
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod/api`)"
-      - "traefik.http.middlewares.api-strip.stripprefix.prefixes=/emilien-prod/api"
-      - "traefik.http.routers.api.middlewares=api-strip"
-      - "traefik.http.services.api.loadbalancer.server.port=5000"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls.certresolver=le"
+      - "traefik.http.routers.api-prod.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod/api`)"
+      - "traefik.http.middlewares.api-prod-strip.stripprefix.prefixes=/emilien-prod/api"
+      - "traefik.http.routers.api-prod.middlewares=api-prod-strip"
+      - "traefik.http.services.api-prod.loadbalancer.server.port=5000"
+      - "traefik.http.routers.api-prod.entrypoints=websecure"
+      - "traefik.http.routers.api-prod.tls.certresolver=le"
     networks:
       - backend-prod-emilien
+      - vault-network
       - traefik
     command: ["dotnet", "Backend.dll"]
 
   frontend-prod:
     build:
       context: ../frontend
-      dockerfile: Dockerfile
+      dockerfile: ../Deploiement/Dockerfile.frontend
       args:
-        BASE_HREF: /emilien-prod/
+        PUBLIC_URL: /emilien-prod
     container_name: frontend-prod
     expose:
-      - "4000"  # SSR Angular écoute sur 4000
+      - "80"
     environment:
-      - API_URL=/emilien-prod/api
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/prod/config
+      - PUBLIC_URL=/emilien-prod
+      - ENV=production
     depends_on:
       - backend-prod
+      - vault
     restart: unless-stopped
+    volumes:
+      - ./entrypoint.sh:/entrypoint.sh
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
-      - "traefik.http.services.front.loadbalancer.server.port=4000"
-      - "traefik.http.routers.front.entrypoints=websecure"
-      - "traefik.http.routers.front.tls.certresolver=le"
+      - "traefik.http.routers.front-prod.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
+      - "traefik.http.services.front-prod.loadbalancer.server.port=80"
+      - "traefik.http.routers.front-prod.entrypoints=websecure"
+      - "traefik.http.routers.front-prod.tls.certresolver=le"
     networks:
       - frontend-prod-emilien
+      - vault-network
       - traefik
+
+  vault:
+    image: vault:latest
+    container_name: cesizen-vault-prod
+    restart: unless-stopped
+    ports:
+      - "8201:8200"
+    environment:
+      - VAULT_DEV_ROOT_TOKEN_ID=root
+      - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - ./init-vault.sh:/app/init-vault.sh
+    networks:
+      - vault-network
+    healthcheck:
+      test: ["CMD", "vault", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   postgres_prod_data:
@@ -79,5 +114,6 @@ volumes:
 networks:
   backend-prod-emilien:
   frontend-prod-emilien:
+  vault-network:
   traefik:
     external: true
