--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,116 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:latest
-    container_name: postegres_db_CESIZen
-    restart: always
-    environment:
-      POSTGRES_USER: CesiZenAdm
-      POSTGRES_PASSWORD: CesiZenAdm59!
-      POSTGRES_DB: CesiZenDB
+  # Service Nginx principal (proxy inverse)
+  nginx:
+    image: nginx:alpine
+    container_name: cesizen-nginx
     ports:
-      - "5432:5432"
+      - "443:443"
+      - "80:80"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl
     networks:
-      - cesizen
-
-  backend:
-    image: mcr.microsoft.com/dotnet/aspnet:9.0
-    container_name: backend
-    working_dir: /app
-    volumes:
-      - ./backend/publish:/app
-    ports:
-      - "5001:5000"
-    environment:
-      - ASPNETCORE_URLS=http://+:5000
-      - ConnectionStrings__DefaultConnection=Host=postegres_db_CESIZen;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
+      - frontend-dev
+      - frontend-prod
+      - backend-dev
+      - backend-prod
     depends_on:
-      - postgres
-    networks:
-      - cesizen
-    command: ["dotnet", "Backend.dll"]
+      - frontend-dev
+      - frontend-prod
+      - backend-dev
+      - backend-prod
 
-  frontend:
+  # Frontend - Environnement de développement
+  frontend-dev:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-    container_name: frontend
-    ports:
-      - "4000:80"
-    environment:
-      - API_URL=/api
-    volumes:
-      - static_assets:/usr/share/nginx/html/assets
+      dockerfile: Dockerfile.frontend
+      args:
+        PUBLIC_URL: /emilien-dev
+    container_name: cesizen-front-dev
     depends_on:
-      - backend
+      - backend-dev
+    environment:
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/dev/config
+      - PUBLIC_URL=/emilien-dev
+      - ENV=development
     networks:
-      - cesizen
+      - frontend-dev
+
+  # Frontend - Environnement de production
+  frontend-prod:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.frontend
+      args:
+        PUBLIC_URL: /emilien-prod
+    container_name: cesizen-front-prod
+    depends_on:
+      - backend-prod
+    environment:
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/prod/config
+      - PUBLIC_URL=/emilien-prod
+      - ENV=production
+    networks:
+      - frontend-prod
+
+  # Backend - Environnement de développement
+  backend-dev:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: cesizen-api-dev
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/dev/config
+    networks:
+      - backend-dev
+
+  # Backend - Environnement de production
+  backend-prod:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: cesizen-api-prod
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+      - VAULT_PATH=secret/data/cesizen/prod/config
+    networks:
+      - backend-prod
+
+  # Service Vault pour la gestion des secrets
+  vault:
+    image: vault:latest
+    container_name: cesizen-vault
+    ports:
+      - "8200:8200"
+    environment:
+      - VAULT_DEV_ROOT_TOKEN_ID=root
+      - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
+    cap_add:
+      - IPC_LOCK
+    networks:
+      - frontend-dev
+      - frontend-prod
+      - backend-dev
+      - backend-prod
 
 volumes:
   postgres_data:
   static_assets:
 
 networks:
-  cesizen:
-    external: true
+  frontend-dev:
+  frontend-prod:
+  backend-dev:
+  backend-prod:
