--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -57,16 +57,18 @@ services:
         BASE_HREF: /emilien-prod/
     container_name: frontend-prod
     expose:
-      - "4000"  # SSR Angular écoute sur 4000
+      - "80"
     environment:
       - API_URL=/emilien-prod/api
     depends_on:
       - backend-prod
     restart: unless-stopped
+    volumes:
+      - ../frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
-      - "traefik.http.services.front.loadbalancer.server.port=4000"
+      - "traefik.http.services.front.loadbalancer.server.port=80"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.routers.front.tls.certresolver=le"
     networks:
