--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,8 @@ FROM --platform=linux/arm64 nginx:alpine
 COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 
 # Copier la configuration nginx personnalisée
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# On utilise le chemin relatif depuis le contexte
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
