--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,42 @@ services:
       - cesizen
     command: ["dotnet", "Backend.dll"]
 
+  # Service backend-dev pour emilien-dev
+  backend-dev:
+    image: mcr.microsoft.com/dotnet/aspnet:9.0
+    container_name: backend-dev
+    working_dir: /app
+    volumes:
+      - ./backend/publish:/app
+    ports:
+      - "5002:5000"
+    environment:
+      - ASPNETCORE_URLS=http://+:5000
+      - ConnectionStrings__DefaultConnection=Host=postegres_db_CESIZen;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
+    depends_on:
+      - postgres
+    networks:
+      - cesizen
+    command: ["dotnet", "Backend.dll"]
+
+  # Service backend-prod pour emilien-prod
+  backend-prod:
+    image: mcr.microsoft.com/dotnet/aspnet:9.0
+    container_name: backend-prod
+    working_dir: /app
+    volumes:
+      - ./backend/publish:/app
+    ports:
+      - "5003:5000"
+    environment:
+      - ASPNETCORE_URLS=http://+:5000
+      - ConnectionStrings__DefaultConnection=Host=postegres_db_CESIZen;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!
+    depends_on:
+      - postgres
+    networks:
+      - cesizen
+    command: ["dotnet", "Backend.dll"]
+
   frontend:
     build:
       context: ./frontend
@@ -49,9 +85,72 @@ services:
     networks:
       - cesizen
 
+  # Service frontend-dev pour emilien-dev
+  frontend-dev:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        BASE_HREF: "/emilien-dev/"
+        BUILD_CONFIG: "development"
+    container_name: frontend-dev
+    ports:
+      - "4001:80"
+    environment:
+      - API_URL=/emilien-dev/api
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_assets_dev:/usr/share/nginx/html/assets
+    depends_on:
+      - backend-dev
+    networks:
+      - cesizen
+
+  # Service frontend-prod pour emilien-prod
+  frontend-prod:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        BASE_HREF: "/emilien-prod/"
+        BUILD_CONFIG: "production"
+    container_name: frontend-prod
+    ports:
+      - "4002:80"
+    environment:
+      - API_URL=/emilien-prod/api
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_assets_prod:/usr/share/nginx/html/assets
+    depends_on:
+      - backend-prod
+    networks:
+      - cesizen
+
+  # Service nginx principal pour le routage
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl:/etc/nginx/ssl
+    depends_on:
+      - frontend-dev
+      - frontend-prod
+      - backend-dev
+      - backend-prod
+    networks:
+      - cesizen
+
 volumes:
   postgres_data:
   static_assets:
+  static_assets_dev:
+  static_assets_prod:
 
 networks:
   cesizen:
