--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,10 +2,6 @@ server {
     listen 80;
     server_name localhost;
     
-    # Récupération du chemin de base de l'application (fourni par l'argument BASE_HREF)
-    # Par défaut : /emilien-dev/ ou /emilien-prod/
-    set $base_path $arg_base_href;
-    
     root /usr/share/nginx/html;
     index index.html;
     
@@ -18,6 +14,18 @@ server {
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
+    }
+    
+    # Gestion des assets
+    location /assets/ {
+        try_files $uri $uri/ =404;
+        add_header Cache-Control "public, max-age=31536000";
+    }
+    
+    # Gestion des fichiers statiques (CSS, JS, images)
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000";
     }
     
     # Redirection pour toutes les requêtes vers index.html
