--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -57,9 +57,12 @@ server {
     # Doit être placé après les routes API mais avant les routes génériques
     location /emilien-dev/ {
         # Rediriger vers le frontend-dev
-        proxy_pass http://frontend-dev:80;
+        proxy_pass http://frontend-dev:80/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
         # Pour le rafraîchissement des pages - géré par le conteneur nginx interne
@@ -70,9 +73,12 @@ server {
     # Routes spécifiques pour emilien-prod
     location /emilien-prod/ {
         # Rediriger vers le frontend-prod
-        proxy_pass http://frontend-prod:80;
+        proxy_pass http://frontend-prod:80/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
         # Pour le rafraîchissement des pages - géré par le conteneur nginx interne
