--- a/Deploiement/docker-compose.prod.yml
+++ b/Deploiement/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: CesiZenAdm59!
       POSTGRES_DB: CesiZenDB
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
     networks:
@@ -38,12 +38,12 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod/api`)"
-      - "traefik.http.middlewares.api-strip.stripprefix.prefixes=/emilien-prod/api"
-      - "traefik.http.routers.api.middlewares=api-strip"
-      - "traefik.http.services.api.loadbalancer.server.port=5000"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls.certresolver=le"
+      - "traefik.http.routers.api-prod.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod/api`)"
+      - "traefik.http.middlewares.api-prod-strip.stripprefix.prefixes=/emilien-prod/api"
+      - "traefik.http.routers.api-prod.middlewares=api-prod-strip"
+      - "traefik.http.services.api-prod.loadbalancer.server.port=5000"
+      - "traefik.http.routers.api-prod.entrypoints=websecure"
+      - "traefik.http.routers.api-prod.tls.certresolver=le"
     networks:
       - backend-prod-emilien
       - traefik
@@ -54,10 +54,11 @@ services:
       context: ../frontend
       dockerfile: Dockerfile
       args:
+        DEPLOY_ENV: production
         BASE_HREF: /emilien-prod/
     container_name: frontend-prod
-    expose:
-      - "80"
+    ports:
+      - "4001:80"  # Nginx écoute sur le port 80
     environment:
       - API_URL=/emilien-prod/api
     depends_on:
@@ -67,10 +68,10 @@ services:
       - ../frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
-      - "traefik.http.services.front.loadbalancer.server.port=80"
-      - "traefik.http.routers.front.entrypoints=websecure"
-      - "traefik.http.routers.front.tls.certresolver=le"
+      - "traefik.http.routers.front-prod.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-prod`)"
+      - "traefik.http.services.front-prod.loadbalancer.server.port=80"
+      - "traefik.http.routers.front-prod.entrypoints=websecure"
+      - "traefik.http.routers.front-prod.tls.certresolver=le"
     networks:
       - frontend-prod-emilien
       - traefik
