--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres-dev;Port=5432;Database=CesiZenDBDev;Username=CesiZenAdm;Password=CesiZenAdm59!"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CesiZenDB;Username=CesiZenAdm;Password=CesiZenAdm59!"
   },
   "Logging": {
     "LogLevel": {
