--- a/Deploiement/docker-compose.dev.yml
+++ b/Deploiement/docker-compose.dev.yml
@@ -32,6 +32,9 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:5000
       - ConnectionStrings__DefaultConnection=Host=postgres-dev;Port=5432;Database=CesiZenDBDev;Username=CesiZenAdm;Password=CesiZenAdm59!
+      - Jwt__Key=CesiZenSecretKey2024ForJWTTokenGeneration
+      - Jwt__Issuer=CesiZen
+      - Jwt__Audience=CesiZenUsers
     depends_on:
       - postgres-dev
     restart: unless-stopped
@@ -67,6 +70,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.rule=Host(`rasphubert.ddns.net`) && PathPrefix(`/emilien-dev`)"
+      - "traefik.http.middlewares.front-strip.stripprefix.prefixes=/emilien-dev"
+      - "traefik.http.routers.front.middlewares=front-strip"
       - "traefik.http.services.front.loadbalancer.server.port=80"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.routers.front.tls.certresolver=le"
